--- a/api/package.json
+++ b/api/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "nodemailer": "^6.5.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31",
@@ -24,6 +25,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
     "@types/node": "^14.14.34",
+    "@types/nodemailer": "^6.4.1",
     "@types/supertest": "^2.0.10",
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
