--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -20,7 +20,8 @@
         "@typescript-eslint"
     ],
     "rules": {
-        "react/react-in-jsx-scope": "off"
+        "react/react-in-jsx-scope": "off",
+        "no-useless-return": "off"
     },
     "globals": {
         "React": "writable"
