--- a/web/package.json
+++ b/web/package.json
@@ -15,12 +15,14 @@
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "4.2.1",
     "eslint-plugin-react": "^7.23.1",
+    "js-cookie": "^2.2.1",
     "next": "latest",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "styled-components": "^5.0.0"
   },
   "devDependencies": {
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "12.0.12",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
